# gpsdenial__anti

./: .gitignore  DOCUMENTATION.md  QUICK_START.md  README.md  ROBOTHON_SUBMISSION_SUMMARY.md  advanced_drone_sim.py  create_demo_video.py  demo_dynamic_replanning.py  demo_loop_closure.py  demo_nav_nodes.py  demo_path_planning.py  demo_predictive_avoidance.py  demo_reactive_control.py  docker-compose.yml  drone_telemetry_cmd.py  metrics_evaluator.py  nature_3d_simulation.py  robothon_demo.py  run_demo.bat  run_drone.ps1  simulation_button_launcher.py  telemetry_live.json  telemetry_log.json
docker/: Dockerfile
drone_nav_2d/: 3D_SYSTEM_README.md  setup.py
drone_nav_2d/config/: nav_params_3d.yaml  obs_config_forest.yaml  obs_config_mixed.yaml  obs_config_urban.yaml  obs_config_warehouse.yaml
drone_nav_2d/drone_nav_2d/: drone_controller_3d.py  drone_visualizer.py  map_publisher.py  map_publisher_3d.py  obstacle_avoidance_3d.py  path_planner.py  path_planner_3d.py  voxel_grid.py
drone_nav_2d/launch/: drone_nav_3d_launch.py  drone_nav_headless.py  drone_nav_launch.py
drone_nav_2d/rviz/: drone_nav.rviz  drone_nav_3d.rviz
drone_nav_2d/urdf/: drone_3d.urdf
drone_nav_2d/worlds/: drone_world_forest_3d.wbt  drone_world_mixed_3d.wbt  drone_world_nature_3d.wbt  drone_world_realistic.wbt  drone_world_urban_3d.wbt  drone_world_warehouse_3d.wbt
install/: local_setup.sh  setup.sh
install/control_layer/lib/control_layer/: motor_mixer  pid_controller
install/control_layer/share/control_layer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  (+2 more)
log/: errors.txt  latest_build  latest_list  slam_errors.txt
scripts/: setup.sh
src/control_layer/: CMakeLists.txt  package.xml
src/control_layer/src/: motor_mixer.cpp  pid_controller.cpp
src/drone_bringup/launch/: master_launch.py
src/fault_handler/: package.xml  setup.py
src/navigation_layer/: package.xml  setup.py
src/perception_layer/: package.xml  setup.py
src/slam_layer/: CMakeLists.txt  package.xml
src/slam_layer/config/: slam_toolbox_params.yaml
src/telemetry/: package.xml  setup.py
(+29 files in other folders)
